add firstWhere method to ORM and added isPersisted convenience method in EGBs